# tracking-policy-agendas

./: .gitignore  Computational_Political_Science_Papers_Implementations$main.coverage  Dockerfile  LICENSE  README.md  ci.yml  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.py  tracking-policy-agendas.coveragerc  word2vec.py
.circleci/: config.yml
.github/workflows/: codeql.yml  deploy.yml  deploy_test.yml  lint.yml
Tracking Policy Agendas/classifiers/: naive_bayes_clf.py
Tracking Policy Agendas/word2vec/: w2v_corpus.py
classifiers/: meta_clf.py  xgb_clf.py
coverage/: Computational_Political_Science_Papers_Implementations$main.syspath.txt  Computational_Political_Science_Papers_Implementations$main.xml
coverage-report/: d_1ab2088f70b70443_lasso_clf_py.html  d_1ab2088f70b70443_meta_clf_py.html  d_1ab2088f70b70443_naive_bayes_clf_py.html  d_1ab2088f70b70443_pa_clf_py.html  d_1ab2088f70b70443_xgb_clf_py.html  d_844b641f888f4511_backend_interagg_py.html  d_957362a063c8f995_main_py.html  d_ca60c2ee62eb39e7___init___py.html  d_ca60c2ee62eb39e7_display__py.html  d_ca60c2ee62eb39e7_display_log_py.html  d_ca60c2ee62eb39e7_supported_data_type_py.html  d_d4c066276e4cc400_preprocessing_py.html  d_d4d5d7025afe0aa8_w2v_corpus_py.html  d_d4d5d7025afe0aa8_w2v_emb_py.html  d_d4d5d7025afe0aa8_w2v_vis_py.html  d_e3e81c3c188fd527___init___py.html  index.html
preprocess/: preprocessing.py
tracking-policy-agendas/: main.py
tracking-policy-agendas/classifiers/: naive_bayes_clf.py  pa_clf.py
tracking-policy-agendas/word2vec/: w2v_vis.py
tracking_policy_agendas/: __init__.py  api.py
tracking_policy_agendas/classifiers/: __init__.py  pa_clf.py  (+5 more)
word2vec/: test_corpus.xlsx  w2v_emb.py  w2v_vis.py
(+5 files in other folders)
