[metadata]
name = tracking_policy_agendas
version = attr: tracking_policy_agendas.__version__
description = A Persian Twitter policy agenda tracking framework
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MohammadForouhesh/tracking-policy-agendas
author = Mohammad H. Forouhesh
author_email = Mohammadh.Forouhesh@gmail.com
keywords = NLP, Computational Social Science, Agenda Setting
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
python_requires = >=3.7
install_requires =
    pandas>=1.3.5
    tqdm>=4.62.3
    gensim>=4.1.2
    numpy>=1.21.5
    scikit-learn>=1.0.2
    matplotlib>=3.5.1
    xgboost>=1.5.0
    pytest>=6.2.5
    coverage>=6.2

[tool:pytest]
xfail_strict = true
junit_duration_report = total
log_cli = True
python_files = 'test.py'

[coverage:report]
exclude_lines =
    pragma: no-cover
    warnings
    pass
    rank_zero_warn
    raise NotImplementedError